# LeanKG

./: .dockerfile.bak2  .dockerfile.example  .gitignore  .leankg  .mcp.json  .mcp.json.test  .safeskillignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  COMMANDCODE.md  Cargo.toml  Dockerfile  Dockerfile.rocksdb  GEMINI.md  INSTRUCTION.md  LICENSE  Makefile  PR_DESCRIPTION.md  README.md  docker-compose.build.yml  docker-compose.embed.yml  docker-compose.override.yml.example  docker-compose.rocksdb.yml  entrypoint.sh  leankg-bootstrap.md  leankg.yaml  manifest.json  release-please-config.json  render.yaml  ship-parallel.sh  ship.service  ship.sh
.claude-plugin/: leankg-bootstrap.md  marketplace.json  plugin.json
.claude-plugin/hooks/: hooks.json  leankg-posttooluse.mjs  leankg-pretooluse.mjs  run-hook.cmd
.commandcode/agents/: parallel-subagent.md
.github/workflows/: ci.yml  leankg-graph.yml  leankg-update.yml  release-please.yml  release.yml
.google-antigravity/: mcp.json
.opencode/: package-lock.json
.opencode/plugins/: leankg.js
.playwright-mcp/: page-2026-07-02T05-37-46-025Z.yml
benches/: orchestrator_bench.rs  orchestrator_real_bench.rs  redundant_tool_overhead.rs  vector_engine_ab.rs
benchmark/prompts/: ontology-tools.yaml
benchmark/results/: ab-benchmark-2026-07-02.md  ab-test-1782963842.json  ab-test-1782964202.json  ab-test-1782970505.json  ab-test-1782971220.json  ab-test-1782971220.md  ab-test-1782971704.json  ab-test-1782971704.md  find-codeelement-comparison.json  find-codeelement-comparison.md  find-mcp-handler-comparison.json  find-mcp-handler-comparison.md  full-tools-report.md  (+10 more)
docs/: LeanKG_v2_PRD.html  README.md  agentic-instructions.md  android-extraction.md  architecture.md  benchmark.md  cli-reference.md  competitive-analysis.html  competitive-analysis.md  cross-tool-benchmark.md  erd-massive-graph.md  erd.md  feature-testing-progress.md  implementation-feature-verification-2026-03-25.md  mcp-setup.md  mcp-tools.md  metrics.md  parallel-workflow.md  prd-task-tracker.json  prd-task-tracker.md  prd.md  roadmap.md  semantic-search-mcp-verification-2026-07-17.md  semantic-search-mcp-verification-2026-07-18.md  ship-flow.md  tech-stack.md  test-coverage-status.md  web-ui.md  workflow-opencode-agent.md
docs/erd/: ui-v2-erd.md
e2e/: debug.spec.js  graph.spec.js  package.json
examples/: bench_embed_infer.rs  bench_embed_stress.rs  bench_embed_writer.rs  bench_embed_writer_disk.rs  bench_fastembed_smoke.rs  bench_redis_writer.rs  debug_cache.rs
generated_docs/: embed_bg_job_and_runtime_plan_2026-07-15.md
hooks/: hooks.json  posttooluse.mjs  pretooluse.mjs  routing-block.mjs  sessionstart.mjs
instructions/: leankg-tools.md
ontology/: concepts.yaml  workflows.yaml
scripts/: alamofire-benchmark.sh  docker-reload.sh  docker-sync-binary.sh  docker-up.sh  embed-all-workspaces-then-mcp.sh  install-leankg-mcp-launchd.sh  install.sh  mcp-smoke-tools.py  watch-leankg-build.sh
src/: budget.rs  gc.rs  lib.rs  main.rs  minhash.rs  registry.rs  runtime.rs
tests/: android_integration_tests.rs  android_performance_tests.rs  batch_delete_stress_tests.rs  batched_insert_tests.rs  budget_lsp_e2e.rs  cli_full_coverage_tests.rs  cli_tests.rs  compression_e2e_tests.rs  data_store_tests.rs  doc_generation.rs  doc_join_quality.rs  embed_build_resume_e2e.rs  embed_doc_inventory.rs  embedding_state_unit_tests.rs  embeddings_state_e2e.rs  graph_cache_tests.rs  graph_query_tests.rs  hnsw_recall_e2e.rs  hybrid_lsp_e2e.rs  integration.rs  kotlin_extraction_tests.rs  load_test_1m_nodes.rs  mcp_tests.rs  mcp_tools_full_tests.rs  mcp_tools_redundancy_tests.rs  ontology_e2e.rs  orchestrator_e2e.rs  performance_tests.rs  phase1_benchmark_test.rs  phase1_integration_test.rs  pipeline_integration_tests.rs  redundant_tools_matrix.rs  route_extractor_db_tests.rs  route_extractor_e2e_tests.rs  route_extractor_edge_tests.rs  route_extractor_integration.rs  route_extractor_more_tests.rs  runtime_e2e_tests.rs  sources_gcs_e2e_tests.rs  sources_integration_tests.rs  (+17 more)
ui/: package-lock.json  package.json
ui-v2/: README.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
(+310 files in other folders)
