[package]
name = "leankg"
version = "0.19.0"
edition = "2021"
description = "Lightweight Knowledge Graph for AI-Assisted Development"
license = "Apache-2.0"
repository = "https://github.com/FreePeak/LeanKG"
homepage = "https://github.com/FreePeak/LeanKG"
documentation = "https://github.com/FreePeak/LeanKG"
readme = "README.md"
keywords = ["knowledge-graph", "ai"]
categories = ["command-line-utilities", "data-structures"]

[lib]
crate-type = ["rlib"]

[features]
default = []
# Enable vector retrieval + cross-encoder rerank + adaptive KG traversal.
# Adds fastembed (embedding + reranker inference via ONNX). Vectors are stored
# in CozoDB's native HNSW index on `embedding_vectors` (no extra deps).
# Off by default to keep the default binary slim.
embeddings = ["dep:fastembed", "dep:ort", "dep:tokenizers", "dep:ndarray"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
walkdir = "2"
glob = "0.3"
futures-util = "0.3"
subtle = "2"
sha2 = "0.10"
rayon = "1.10"
pulldown-cmark = "0.12"
regex = "1"
once_cell = "1"
schemars = "0.8"
async-trait = "0.1"
dirs = "5"
argon2 = "0.5"
uuid = { version = "1", features = ["v4", "serde"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
tree-sitter-kotlin-ng = "1.1.0"
which = "7"
reqwest = { version = "0.12", features = ["rustls-tls", "blocking", "json"], default-features = false }
tar = "0.4"
flate2 = "1"
tempfile = "3"
rust-embed = "8"
ignore = "0.4.25"
similar = "3.1.0"
roxmltree = "0.20"
tree-sitter-bash = "0.25"
tree-sitter-ruby = "0.23.1"
tree-sitter-php = "0.24.2"
tree-sitter-elixir = "0.3.5"
tree-sitter-r = "1.2.0"
tree-sitter = "0.26"
tree-sitter-perl = "1.1.2"
# US-CBM-B1 LSP bridge: protocol types + async client scaffolding
lsp-types = "0.97"
sysinfo = "0.32"

# Embedding retrieval stack (optional, behind `embeddings` feature).
# fastembed: in-process embedding inference AND cross-encoder reranking
#   via ONNX Runtime. Covers BGE-small-en-v1.5 (embed) + bge-reranker-v2-m3 (rerank).
fastembed = { version = "4", optional = true }
# FR-EMBED-FAST: ort + tokenizers are direct deps (not just transitive via
# fastembed) so we can construct custom ONNX sessions with controlled
# intra_threads (fastembed 4.9.1 hardcodes `intra_threads = available_parallelism()`
# which on 10c hosts makes N worker sessions = 10N oversubscribed threads,
# capping throughput at ~120 vec/sec). See src/embeddings/models.rs
# `DirectEmbedder` for the alternative path that lifts this cap.
ort = { version = "2.0.0-rc.9", optional = true }
tokenizers = { version = "0.21", optional = true, default-features = false, features = ["onig"] }
ndarray = { version = "0.16", optional = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
axum = "0.7"
cozo = { version = "0.7.6", features = ["storage-rocksdb"] }
notify = "7"
parking_lot = "0.12"
tokio = { version = "1", features = ["full"] }
rmcp = { version = "1.4.0", features = ["server", "transport-io"] }
tree-sitter = "0.26"
tree-sitter-go = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-java = "0.23"
tree-sitter-bash = "0.25"
tree-sitter-ruby = "0.23"
tree-sitter-php = "0.24"
tree-sitter-perl = "1.1"
tree-sitter-r = "1.2"
tree-sitter-elixir = "0.3"
tree-sitter-dart = "0.1"

# Bounded MPMC channel used by the embed pipeline to keep N inference
# workers and a single CozoDB writer decoupled. Without this, N workers
# contending for the CozoDB write Mutex serialized the Datalog :put
# path and throughput collapsed to ~40 vectors/sec.
crossbeam-channel = "0.5"

# Optional Redis HNSW vector side-store (LEANKG_EMBED_VECTOR_STORE=redis)
redis = { version = "0.27", features = ["aio", "tokio-comp"] }

[dev-dependencies]

[[bench]]
name = "vector_engine_ab"
harness = false

[[bench]]
name = "orchestrator_bench"
harness = false

[[bench]]
name = "orchestrator_real_bench"
harness = false

